--- a/PokemonFront/src/index.css
+++ b/PokemonFront/src/index.css
@@ -1,69 +1,124 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+.pokedex-hero{
+  background-image: url("./assets/tumblr_pev0myaFLh1sqpyoco1_1280.jpeg");
+  background-size: contain;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+.hero{
+  background-image: url(./assets/3d-abstract-wave-pattern-background.jpg);
+  background-size: cover;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+.card{
+  z-index: 10;
+  position: relative;
+  top: 28%;
+   left:70% ;
+   color: whitesmoke;
+   background-image: url("/src/assets/image.jpg");
+   background-size: cover;
+   padding:1rem 0 0;
+   max-width: 45ch;
+   min-width: 35ch;
+   border-radius: .5rem;
+   overflow:hidden;
+   transition-delay: 200ms;
+   transition:transform 500ms ease;
+   margin-top: 25px;
+   box-shadow: 5px 5px 5px black;
+   animation:slideImg 600s infinite;    
+   animation-timing-function: linear;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+
+.card:hover{
+   transform: scale(1.10);
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+
+.card:hover .card-content{
+   transform: translateY(0);
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+.card-content{
+  position: relative;
+   padding: 1.5rem;
+   padding-bottom: 4.5rem;
+   background: linear-gradient(
+       hsl(0 0% 0%/0),
+       hsl(0 0% 0%/.4) 20%,
+       hsl(0 0% 0%/.2)
+   );
+   transform: translateY(70%);
+   transition:transform 500ms ease ;
+   transition-delay: 500ms;
+  
+}
+.card-body{
+   padding-top: 10px;
+   padding-bottom: 20px;
+   color: rgba(255, 255, 255, .82);
+}
+.title{
+   position: relative;
+   max-width: 100%;
+   width: max-content;
+   font-size: 27px;
+}
+
+.title::after{
+   content: "";
+   position: absolute;
+   height: 4px;
+   width: calc(100% + 1.5rem);
+   left: -1.5rem;
+   bottom: 0;
+   background: hsl(0, 4%, 86%);
+   transform:scaleX(0);
+   transform-origin: left;
+   transition:transform 500ms ease;
+}
+
+.card:hover .title::after{
+   transform:scaleX(1);
+}
+
+.button{
+   cursor: pointer;
+   display: inline-block;
+   text-decoration: none;
+   color: white;
+   background-color:  hsl(142, 90%, 61%);
+   padding: 0.5em 1.25em;
+   border-radius: 1rem;
+   
+}
+
+@keyframes slideImg {
+  
+  0% {
+    background-position: 0 0;
   }
-  a:hover {
-    color: #747bff;
+ 
+  100% {
+    background-position: 751% 0;
   }
-  button {
-    background-color: #f9f9f9;
+
+}
+
+@media (max-width:1400px) {
+  .card{
+    visibility: hidden;
+  }
+
+}
+@media (min-width:600px) {
+  .greeting{
+      position: relative;
+      left:-10%;
   }
 }
